_build/html/reports/5_nlp.log
Traceback (most recent call last):
  File "C:\Users\rob_t\anaconda3\envs\steam_nlp\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\rob_t\anaconda3\envs\steam_nlp\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\rob_t\anaconda3\envs\steam_nlp\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\rob_t\anaconda3\envs\steam_nlp\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\rob_t\anaconda3\envs\steam_nlp\lib\asyncio\base_events.py", line 646, in run_until_complete
    return future.result()
  File "C:\Users\rob_t\anaconda3\envs\steam_nlp\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\rob_t\anaconda3\envs\steam_nlp\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\rob_t\anaconda3\envs\steam_nlp\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
`%%capture --no-stderr`
import nltk
from nltk.corpus import stopwords
from collections import Counter

# import stopwords and extend list
stpwrds = nltk.corpus.stopwords.words('english')
newStpWrds = ["game","play"]
stpwrds.extend(newStpWrds)

# create dictionary to increase processing speed
stpdict = Counter(stpwrds)

import spacy
nlp = spacy.load("en_core_web_trf")
import torch
device = torch.device("cpu")

def lemma(text):
    doc = nlp(text)
    text = [token.lemma_ for token in doc if token.text not in stpdict]
    text = " ".join(text)
    return text

df['review_text'] = df['review_text'].map(lemma)

with option_context('display.max_colwidth', 200):
    display(df[["review_text"]].head())
------------------

[1;36m  Input [1;32mIn [7][1;36m[0m
[1;33m    `%%capture --no-stderr`[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (3181651581.py, line 1)

